fixed a mobile device issue on the filter scroll

--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -3160,15 +3160,16 @@ div.jp-audio {
   padding-left: 0 !important;
   width: 100% !important;
   z-index: 1400 !important;
+  padding-bottom: 20px !important;
 }
 
 @media only screen and (max-width: 1000px) {
-  /* line 2414, ../sass/style.scss */
+  /* line 2415, ../sass/style.scss */
   .scrollingTitle, .scrollingFilter {
     padding-left: 0px !important;
   }
 }
-/* line 2420, ../sass/style.scss */
+/* line 2421, ../sass/style.scss */
 .scrollingFilter, .scrollingTermDesc, .scrollingView-filters {
   background: url("../images/shadow_local_bar-1.png") repeat-x scroll center bottom rgba(0, 0, 0, 0);
   position: fixed !important;
@@ -3178,12 +3179,12 @@ div.jp-audio {
   z-index: 1400 !important;
 }
 
-/* line 2428, ../sass/style.scss */
+/* line 2429, ../sass/style.scss */
 .teachingsBarInnerWrapper {
   margin: auto;
 }
 
-/* line 2437, ../sass/style.scss */
+/* line 2438, ../sass/style.scss */
 .scrollingFilter {
   padding-top: 10px;
   padding-bottom: 10px !important;
@@ -3565,7 +3566,7 @@ a.close-tip {
 }
 
 /**agenda**/
-/* line 2449, ../sass/style.scss */
+/* line 2450, ../sass/style.scss */
 #classAgenda th {
   background: none repeat scroll 0 0 #F5F5F5;
   border: medium none;
@@ -3579,25 +3580,25 @@ a.close-tip {
   padding-left: 70px;
 }
 
-/* line 2462, ../sass/style.scss */
+/* line 2463, ../sass/style.scss */
 #classAgenda th:nth-child(1),
 #classAgenda td:nth-child(1) {
   padding-left: 13px;
   width: 30%;
 }
 
-/* line 2466, ../sass/style.scss */
+/* line 2467, ../sass/style.scss */
 #classAgenda table {
   width: 96.5%;
   margin-bottom: 20px;
 }
 
-/* line 2470, ../sass/style.scss */
+/* line 2471, ../sass/style.scss */
 #classAgenda tbody {
   border: none;
 }
 
-/* line 2473, ../sass/style.scss */
+/* line 2474, ../sass/style.scss */
 #classAgenda table td {
   color: #433a3a;
   font-family: "ProxiLight";
@@ -3610,7 +3611,7 @@ a.close-tip {
 }
 
 /**search page**/
-/* line 2489, ../sass/style.scss */
+/* line 2490, ../sass/style.scss */
 #edit-field-author-tid-wrapper,
 #edit-field-portion-tid-wrapper,
 #edit-field-secondary-topic-tid-wrapper,
@@ -3618,26 +3619,26 @@ a.close-tip {
   float: left !important;
 }
 
-/* line 2492, ../sass/style.scss */
+/* line 2493, ../sass/style.scss */
 #views-exposed-form-search-page span.lessonsCourse {
   display: block;
 }
 
-/* line 2495, ../sass/style.scss */
+/* line 2496, ../sass/style.scss */
 #edit-field-author-tid-wrapper {
   margin-right: 10px;
 }
 
-/* line 2498, ../sass/style.scss */
+/* line 2499, ../sass/style.scss */
 #views-exposed-form-search-page label {
   display: inline;
 }
 
-/* line 2501, ../sass/style.scss */
+/* line 2502, ../sass/style.scss */
 #views-exposed-form-search-page #edit-title-wrapper {
   margin-left: 0;
 }
-/* line 2503, ../sass/style.scss */
+/* line 2504, ../sass/style.scss */
 #views-exposed-form-search-page #edit-title-wrapper label {
   color: #999999;
   font-size: 14px;
@@ -3646,12 +3647,12 @@ a.close-tip {
   text-align: left;
   text-transform: capitalize;
 }
-/* line 2511, ../sass/style.scss */
+/* line 2512, ../sass/style.scss */
 #views-exposed-form-search-page #edit-title-wrapper input {
   margin-top: 0;
 }
 
-/* line 2515, ../sass/style.scss */
+/* line 2516, ../sass/style.scss */
 .quicktabs-tabs.quicktabs-style-zen > li {
   display: inline;
   color: #433A3A;
@@ -3659,24 +3660,24 @@ a.close-tip {
   margin-bottom: -1px;
 }
 
-/* line 2521, ../sass/style.scss */
+/* line 2522, ../sass/style.scss */
 .quicktabs-tabs.quicktabs-style-zen > li.active {
   background: url("../images/small_tab.png") no-repeat scroll center bottom rgba(0, 0, 0, 0);
   display: inline-block;
   height: 41px;
 }
-/* line 2525, ../sass/style.scss */
+/* line 2526, ../sass/style.scss */
 .quicktabs-tabs.quicktabs-style-zen > li.active a {
   color: #9C1F19;
 }
 
-/* line 2530, ../sass/style.scss */
+/* line 2531, ../sass/style.scss */
 ul.quicktabs-tabs.quicktabs-style-zen {
   border-bottom: 1px solid #CCC;
   margin-bottom: 20px;
 }
 
-/* line 2535, ../sass/style.scss */
+/* line 2536, ../sass/style.scss */
 .quicktabs-tabpage .quicktabs-views-group {
   float: left;
   height: 170px;
@@ -3685,13 +3686,13 @@ ul.quicktabs-tabs.quicktabs-style-zen {
   width: 300px;
 }
 
-/* line 2542, ../sass/style.scss */
+/* line 2543, ../sass/style.scss */
 .views-exposed-widget.views-submit-button {
   float: left !important;
   margin-left: 10px;
 }
 
-/* line 2546, ../sass/style.scss */
+/* line 2547, ../sass/style.scss */
 #views-exposed-form-search-page input.form-submit {
   background: none repeat scroll 0 0 #328A9A;
   border: medium none;
@@ -3707,67 +3708,67 @@ ul.quicktabs-tabs.quicktabs-style-zen {
 }
 
 /***custom ccarousel for search page***/
-/* line 2560, ../sass/style.scss */
+/* line 2561, ../sass/style.scss */
 .quicktabs-views-group .imagesCont {
   position: relative;
 }
 
-/* line 2563, ../sass/style.scss */
+/* line 2564, ../sass/style.scss */
 .quicktabs-views-group .imagesCont img {
   float: none;
 }
 
-/* line 2566, ../sass/style.scss */
+/* line 2567, ../sass/style.scss */
 .quicktabs-views-group .theDescCont {
   position: absolute;
   bottom: 0px;
 }
 
-/* line 2570, ../sass/style.scss */
+/* line 2571, ../sass/style.scss */
 .quicktabs-views-group .theTeaser {
   display: none;
 }
 
-/* line 2573, ../sass/style.scss */
+/* line 2574, ../sass/style.scss */
 .quicktabs_main {
   float: left;
   margin-bottom: 50px;
 }
 
-/* line 2577, ../sass/style.scss */
+/* line 2578, ../sass/style.scss */
 #views-exposed-form-search-page .views-widget {
   margin-top: 2px;
 }
 
-/* line 2580, ../sass/style.scss */
+/* line 2581, ../sass/style.scss */
 #views-exposed-form-search-page #edit-title-wrapper .views-widget {
   margin-top: 0px;
 }
 
 /**style for karen page**/
-/* line 2585, ../sass/style.scss */
+/* line 2586, ../sass/style.scss */
 .field-item.even img {
   float: left;
 }
 
-/* line 2588, ../sass/style.scss */
+/* line 2589, ../sass/style.scss */
 .fontBold {
   font-family: "ProxiRegular";
   font-weight: bold;
 }
 
-/* line 2592, ../sass/style.scss */
+/* line 2593, ../sass/style.scss */
 .page-node-5825 #page-title {
   text-align: center;
 }
 
-/* line 2595, ../sass/style.scss */
+/* line 2596, ../sass/style.scss */
 .page-node-5831 #page-title {
   text-align: center;
 }
 
 /********added style for the support tap*************/
-/* line 2599, ../sass/style.scss */
+/* line 2600, ../sass/style.scss */
 .ZenboxTabRight {
   bottom: 10%;
   right: 94px !important;
@@ -3779,7 +3780,7 @@ ul.quicktabs-tabs.quicktabs-style-zen {
   transform: rotate(-90deg);
 }
 
-/* line 2610, ../sass/style.scss */
+/* line 2611, ../sass/style.scss */
 #zenbox_tab img {
   background: none repeat scroll 0 0 #000000;
   border-right: 2px solid #FFFFFF;
@@ -3789,7 +3790,7 @@ ul.quicktabs-tabs.quicktabs-style-zen {
   box-shadow: 1px 0 2px 2px #bebebe;
 }
 
-/* line 2618, ../sass/style.scss */
+/* line 2619, ../sass/style.scss */
 .page-node-5824 .sharethis {
   border-top: none;
   padding-top: 22px;
