--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2409,6 +2409,7 @@ div.jp-audio{
     padding-left: 0!important;
     width: 100%!important;
     z-index: 1400 !important;
+    padding-bottom:20px!important;
 }
 @media only screen and (max-width: 1000px){
 	.scrollingTitle,.scrollingFilter{
