--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -89,6 +89,12 @@ ul li {
     float: left;
     margin-left: 20px;
     margin-top: -3px;
+    width: 260px;
+    height: 35px;
+    img{
+      width: 260px;
+    height: 35px;
+    }
 }
 .topHeader #topImageCont {
     padding-left: 0 !important;
