--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -119,6 +119,7 @@ ul li {
     }
     &:nth-child(3){
         background: url("../images/nav-triangle-wht.png") no-repeat center bottom;
+        height: 41px;
         & a{
             color: $colorRed;
         }
@@ -162,6 +163,7 @@ ul li {
 #outerMenu{
     margin-bottom:-4px;
     width: 100%;
+    clear: both;
     ul li {
         display: inline-block;
     float: none;
