--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -178,7 +178,7 @@ ul li {
         text-transform: uppercase;
         @media screen and (max-width: 1200px) {
            font-size: 12px;
-           padding: 0 2px;
+           padding: 0;
   }
     }
     &.first{
