--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -3811,6 +3811,7 @@ ul.quicktabs-tabs.quicktabs-style-zen {
   clear: both;
   margin: auto;
   width: 884px;
+  padding-bottom: 20px;
 }
 
 /* line 2637, ../sass/style.scss */
