--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2641,3 +2641,11 @@ ul.quicktabs-tabs.quicktabs-style-zen {
 #audioDownloadLink > a span{
   color: #71DFFF;
 }
+
+/*** comment section**/
+
+.commentsSection {
+  clear: both;
+  margin: auto;
+  width: 940px;
+}
