--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1433,7 +1433,7 @@ h3 {
 .videocontent {
     margin: auto;
     clear: both;
-    width: 846px;
+    //width: 846px;
 }
 // .videoContent {
 //     margin: auto;
