--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1435,12 +1435,12 @@ h3 {
     clear: both;
     //width: 846px;
 }
-// .videoContent {
-//     margin: auto;
-//     clear: both;
-//     width: 620px;
-//     padding-top: 30px;
-// }
+ .videoContent {
+     margin: auto;
+     clear: both;
+     width: 620px;
+     padding-top: 30px;
+ }
 #videoTitlesWrapper {
     background: none repeat scroll 0 0 #F5F5F5;
     width: 100%;
