--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2651,3 +2651,43 @@ ul.quicktabs-tabs.quicktabs-style-zen {
   margin: auto;
   width: 940px;
 }
+
+/*** added menu logo style**/
+
+  .icon-bar {
+   background-color: #433A3A;
+    border-radius: 2px;
+    display: block;
+    height: 5px;
+    width: 40px;
+    box-sizing: border-box;
+}
+.icon-bar + .icon-bar {
+    margin-top: 5px;
+}
+.navbar-toggle {
+    background: none;
+    border: none;
+    cursor: pointer;
+    float: right;
+    margin-bottom: 8px;
+    padding: 7px 4px;
+}
+.navbar-toggle:focus,
+.navbar-toggle:hover{
+  background:none;
+}
+#naviConWrapper{
+    float: left;
+    margin-right: 10px;
+}
+#navLogoWrapper {
+  float: left;
+    margin-right: 10px;
+}
+#navLogoWrapper h1{
+  font-size: 20px;
+    margin: 0;
+    padding: 0;
+    color: #9C1F19;
+}
