--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2652,6 +2652,43 @@ ul.quicktabs-tabs.quicktabs-style-zen {
   width: 940px;
 }
 
+
+
+/*--- add style for mobile menu-----*/
+
+
+
+#kabbalahlogo {
+    float: left;
+    margin-left: 20px;
+    margin-top: 10px;
+}
+#ukabblahlogowrapper {
+    float: left;
+    width: 100%;
+}
+#ukabbalahlogo {
+    float: left;
+    margin-left: 51px;
+    width: 200px;
+}
+#usersessionsession {
+    float: right;
+    margin-right: 20px;
+}
+
+#mainlogo .donate{
+  margin-right: 20px;
+}
+#mainlogo .searchLogo,
+#mainlogo .donate{
+  margin-top: 10px;
+}
+#sidr-wrapper-0{
+  float: left;
+    margin-left: 14px;
+}
+
 /*** added menu logo style**/
 
   .icon-bar {
