added media query

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -171,12 +171,16 @@ ul li {
     border-top: 0 none;
     border: none;
     background: none;
+    @media screen and (max-width: 1200px) {
+           margin: 0 4px;
+  }
+
      & a{
         padding: 0 5px;
         color: $colorBrown;
         font-size: 15px;
         text-transform: uppercase;
-        @media screen and (max-width: 1220px) {
+        @media screen and (max-width: 1200px) {
            font-size: 12px;
            padding: 0;
   }
