added pointing cursor on the courses list

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1765,6 +1765,9 @@ h3 {
     display: inline-block;
     width: 940px;
 }
+.liveEventCollectionSection tbody tr{
+  cursor: pointer;
+}
 .lessonCollectionSection table thead tr th:nth-child(1),
 .lessonCollectionSection table tbody tr td:nth-child(1){
   width: 34px;
