--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -2305,7 +2305,7 @@ h3 a {
 }
 
 /* line 1768, ../sass/style.scss */
-.liveEventCollectionSection tbody tr {
+.view-content tbody tr {
   cursor: pointer;
 }
 
