--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1765,7 +1765,7 @@ h3 {
     display: inline-block;
     width: 940px;
 }
-.liveEventCollectionSection tbody tr{
+.view-content tbody tr{
   cursor: pointer;
 }
 .lessonCollectionSection table thead tr th:nth-child(1),
