added html 5 tags and updated css for local menu

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -215,6 +215,8 @@ ul li {
     float: left;
     margin-left: 32px;
     margin-top: 7px;
+    margin-bottom: 0;
+    padding-left: 0;
 }
 .donateFloatFix {
     display: inline;
