--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -279,7 +279,7 @@ ul li {
   background: #5e792f;
 }   
    
-/*-----------Start slides info desc-----*/
+/*-------Start slides info desc------*/
 
 .slidesTitle{
     font-size: 30px;
