--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -499,6 +499,7 @@ background-color:#653a24;
     font-size: 16px;
     font-style: italic;
     line-height: 20px;
+    margin-left: 58px;
 }
 #fpSocialMediaBlock3 p {
     font-style: italic;
