updated the social media icons

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1241,11 +1241,11 @@ h3 {
 .logged-in.node-type-lesson #wrapperVideoSection{
   padding-bottom:0px;
 }
-.audioSection #eSocial .sharethis{
+.audiosocialmedia .sharethis{
     border: none;
     float: right;
 }
-.audioSection #eSocial{
+.audiosocialmedia{
     float: none!important;
     width: 670px!important;
     margin-top: -21px!important;
