--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1235,12 +1235,12 @@ h3 {
     height: 100%;
     width:100%;
     float: left;
-    padding-bottom: 35px;
+    padding-bottom: 25px;
 }
-.logged-in.node-type-live-events #wrapperVideoSection,
-.logged-in.node-type-lesson #wrapperVideoSection{
-  padding-bottom:0px;
-}
+// .logged-in.node-type-live-events #wrapperVideoSection,
+// .logged-in.node-type-lesson #wrapperVideoSection{
+//   padding-bottom:0px;
+// }
 .audiosocialmedia .sharethis{
     border: none;
     float: right;
