--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1270,10 +1270,11 @@ h3 {
     // margin-left: 14px!important;
     // margin-top: 292px!important;
     // float: left;
-    margin:auto;  
-    width: 940px;
     display: inline-block;
-    padding-top:10px;
+    margin: auto;
+    padding-top: 10px;
+    text-align: right;
+    width: 817px;
 }
 .st_email_large {
     margin-left: -2px;
