--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1399,6 +1399,9 @@ h3 {
     text-align:left;
     text-transform: uppercase;
 } 
+#primaryTopicMultimedia{
+  display: block;
+}
 #dateMultimedia{
   text-transform:capitalize; 
 }
