--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2829,3 +2829,12 @@ ul.quicktabs-tabs.quicktabs-style-zen {
 .page-search .view-filters {
     margin-bottom: 20px;
 }
+/***/
+#weeksPortion {
+    left: 256px;
+    position: relative;
+    top: -31px;
+    a{
+      color: #127795;
+    }
+}
