--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2854,7 +2854,7 @@ ul.quicktabs-tabs.quicktabs-style-zen {
     margin-top: 0;
 }
 .page-search .view-filters {
-    border-bottom: 0 solid #CCCCCC;
+    border-bottom: 0 solid #CCCCCC!important;
     height: auto!important;
     margin-bottom: 50px;
 }
