--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2612,7 +2612,8 @@ ul.quicktabs-tabs.quicktabs-style-zen {
     margin: 22px auto auto;
     padding: 7px 19px;
     text-align: center;
-    width: 80px;
+    text-transform: uppercase;
+    width: 96px;
 }
 /***custom ccarousel for search page***/
 .quicktabs-views-group .imagesCont{
